# fastapi-chat

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  prestart.sh  pyproject.toml
app/: main.py
app/core/: config.py  db.py
migrations/: env.py
migrations/versions/: 3269bc445373_init.py
